# openhip_hhit_impl

./: .gitignore  CMakeLists.txt  config.status  configure
conf/: hip.conf
patches/openhip-bind/: hi2dns.c
src/: Makefile.am
src/include/hip/: hip_funcs.h  hip_globals.h  hip_proto.h  hip_types.h  hip_version.h
src/include/win32/: checksum.h
src/lib/include/XKCP/: Keyakv2.h  Keyakv2.inc  Motorist.inc  config.h
src/lib/src/XKCP/: KeccakHash.c  KeccakP-1600-compact64.c  KeccakP-800-compact.c  KeccakSponge.c  Keyakv2.c  SP800-185.c  SimpleFIPS202.c
src/linux/: hip_linux_umh.c
src/protocol/: hip_cache.c  hip_dht.c  hip_globals.c  hip_input.c  hip_keymat.c  hip_main.c  hip_output.c
src/usermode/: hip_esp.c  hip_mr.c
src/util/: hip_util.c  hip_xml.c  hitgen.c
src/util/cfg-api/: test_cfgapi.c
src/util/cfg-common/: hip_cfg.cpp
src/util/scripts/: hiptest.py
test/: README.md  hipnode.py  test_hip.py
